scroll overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   background-color: #dadfe9;
   min-height: 100vh;
   text-align: center;
+  width: 100%;
+  overflow-x: scroll;
 }
 
 .App-logo {
@@ -32,11 +34,15 @@ a {
 }
 
 button {
-  margin: 25px;
+  margin: 20px;
 }
 
 .add-transaction {
   margin: auto;
   display: inline-block;
   width: 300px;
+}
+
+.table {
+  /* margin: 10px; */
 }
